se agrega tarea en segundo plano con asyntask

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -25,7 +25,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="contar"
-        android:text="Back" />
+        android:text="Contar" />
+
+    <Button
+        android:id="@+id/btnPintar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="pintar"
+        android:text="Pintar" />
 
     <Button
         android:id="@+id/btnNavegar"
