se entre avance en volley con exito y httpurlconnection con error 404

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -35,6 +35,13 @@
         android:text="Pintar" />
 
     <Button
+        android:id="@+id/btnConsultar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="consultar"
+        android:text="Consultar" />
+
+    <Button
         android:id="@+id/btnNavegar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
