--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -54,11 +54,30 @@
         android:layout_height="wrap_content"
         android:onClick="backToLogin"
         android:text="Back" />
+    <Button
+        android:id="@+id/btnFrag"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="iniciarFragment"
+        android:text="Iniciar Fragment" />
 
     <TextView
-        android:id="@+id/tvData"
+        android:id="@+id/tvData2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:text="TextView" />
+
+    <fragment
+        android:id="@+id/fragment"
+        android:name="com.example.myapplication.BlankFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:id="@+id/dynamicFrag"
+        android:layout_weight="4"
+        android:layout_height="wrap_content"/>
+
 
 </LinearLayout>
